# SitesChecker

./: !cmake.sh  CMakeLists.txt  translation.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
